# steel

./: .gitignore  IMPLEMENT.md  PLAN.md  README.md  TASK_BRIEF.md  pyproject.toml
configs/: neudet_base.yaml  rtdetr_neudet.yaml  yolo_neudet.yaml
scripts/: aggregate_stats.py  create_stratified_folds.py  evaluate.py  train_rtdetr.py  train_yolo.py
src/steel_exp/: __init__.py  io.py
